--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -5,6 +5,12 @@
   <%= @movie.title %>
 </p>
 
+
+<p>
+  <strong>Poster:</strong>
+  <%= image_tag(@movie.poster) %>
+</p>
+
 <p>
   <strong>Trailer:</strong>
   <%= @movie.trailer %>
