--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -15,7 +15,13 @@
     <%= form.label :title %>
     <%= form.text_field :title, id: :movie_title %>
   </div>
-
+  
+  <div class="field">
+	<%= form.label :poster %>
+	<%= form.text_field :poster, id: : movie_poster %>
+	</div>
+	
+	
   <div class="field">
     <%= form.label :trailer %>
     <%= form.text_area :trailer, id: :movie_trailer %>
